# certification_task

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
api/: urls.py
config/: settings.py  urls.py
hierarchy/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
hierarchy/migrations/: 0001_initial.py  0002_entrepreneur_alter_contacts_options_and_more.py  0002_rename_individualentrepreneur_entrepreneur_and_more.py  0003_alter_entrepreneur_provider_from_factory_and_more.py  0003_remove_factory_provider.py  0004_alter_entrepreneur_provider_from_factory_and_more.py  0004_remove_factory_debt_alter_entrepreneur_debt_and_more.py  0005_alter_entrepreneur_provider_from_factory_and_more.py  0006_alter_entrepreneur_provider_from_factory_and_more.py  0007_alter_entrepreneur_provider_from_factory_and_more.py
hierarchy/tests/: conftest.py  test_entrepreneur.py  test_factory.py  test_retail.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_user_date_joined_user_first_name_and_more.py
users/tests/: test_views.py
